--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
                     Seorang pemimpin masa depan yang strategist, visioner, dan professional dari Bumi Mageti. Seorang pemudi yang siap membawa diri dan lingkungannya ke arah yang lebih baik dalam sentuhan dunia yang penuh warna.
                 </p>
                 <div class="flex flex-wrap gap-4 justify-center md:justify-start">
-                    <!-- Updated WhatsApp Number -->
                     <a href="https://wa.me/6282337931876" target="_blank" class="px-8 py-4 bg-gray-900 text-white rounded-full font-medium hover:bg-gray-800 transition-all flex items-center gap-2 group shadow-xl hover:scale-105">
                         Kenal Lebih Dekat 
                         <svg class="w-5 h-5 group-hover:translate-x-1 transition-transform" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
@@ -97,15 +96,24 @@
                 </div>
             </div>
 
+            <!-- BAGIAN FOTO -->
             <div class="flex-1 flex justify-center relative">
                 <div class="relative w-64 h-64 md:w-80 md:h-80 rounded-[40px] rotate-3 overflow-hidden shadow-2xl border-4 border-white animate-float">
-                    <div class="absolute inset-0 bg-gradient-to-br from-pink-200 via-purple-200 to-blue-200 flex items-center justify-center">
+                    <!-- GANTI URL DI BAWAH INI DENGAN LINK FOTO ANDA -->
+                    <img 
+                        src="https://i.ibb.co.com/nNQ8Zpct/Whats-App-Image-2026-01-16-at-12-12-12-AM.jpg" 
+                        alt="Foto Sherly Rosita Ningtyas"
+                        class="w-full h-full object-cover"
+                        onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';"
+                    >
+                    <!-- Fallback jika foto gagal dimuat -->
+                    <div class="hidden absolute inset-0 bg-gradient-to-br from-pink-200 via-purple-200 to-blue-200 items-center justify-center">
                         <svg class="w-32 h-32 text-white opacity-40" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd"></path></svg>
                     </div>
                 </div>
                 <div class="absolute -bottom-6 -left-6 md:left-0 animate-bounce-slow">
                     <div class="glass p-4 rounded-2xl flex items-center gap-3 shadow-xl">
-                        <div class="w-10 h-10 rounded-full bg-yellow-100 flex items-center justify-center text-yellow-600 shadow-inner">
+                        <div class="w-10 h-10 rounded-full bg-yellow-100 flex items-center justify-center text-yellow-600 shadow-inner text-xl">
                             ⭐
                         </div>
                         <div>
@@ -132,7 +140,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-12 relative z-10 text-left">
                         <div class="space-y-10">
                             <div class="flex items-center gap-5 group">
-                                <div class="p-4 rounded-2xl bg-white/50 text-pink-500 shadow-sm group-hover:bg-pink-500 group-hover:text-white transition-all duration-300">
+                                <div class="p-4 rounded-2xl bg-white/50 text-pink-500 shadow-sm group-hover:bg-pink-500 group-hover:text-white transition-all duration-300 text-2xl">
                                     📅
                                 </div>
                                 <div>
@@ -141,7 +149,7 @@
                                 </div>
                             </div>
                             <div class="flex items-center gap-5 group">
-                                <div class="p-4 rounded-2xl bg-white/50 text-blue-500 shadow-sm group-hover:bg-blue-500 group-hover:text-white transition-all duration-300">
+                                <div class="p-4 rounded-2xl bg-white/50 text-blue-500 shadow-sm group-hover:bg-blue-500 group-hover:text-white transition-all duration-300 text-2xl">
                                     📍
                                 </div>
                                 <div>
@@ -153,7 +161,7 @@
 
                         <div class="space-y-10">
                             <div class="flex items-center gap-5 group">
-                                <div class="p-4 rounded-2xl bg-white/50 text-purple-500 shadow-sm group-hover:bg-purple-500 group-hover:text-white transition-all duration-300">
+                                <div class="p-4 rounded-2xl bg-white/50 text-purple-500 shadow-sm group-hover:bg-purple-500 group-hover:text-white transition-all duration-300 text-2xl">
                                     🎓
                                 </div>
                                 <div>
@@ -162,7 +170,7 @@
                                 </div>
                             </div>
                             <div class="flex items-center gap-5 group">
-                                <div class="p-4 rounded-2xl bg-white/50 text-yellow-600 shadow-sm group-hover:bg-yellow-500 group-hover:text-white transition-all duration-300">
+                                <div class="p-4 rounded-2xl bg-white/50 text-yellow-600 shadow-sm group-hover:bg-yellow-500 group-hover:text-white transition-all duration-300 text-2xl">
                                     💡
                                 </div>
                                 <div>
@@ -195,7 +203,7 @@
             <div class="grid grid-cols-1 sm:grid-cols-3 gap-8">
                 <!-- Hobby: Menyanyi -->
                 <div class="group relative pt-12">
-                    <div class="absolute top-0 left-1/2 -translate-x-1/2 z-10 p-5 rounded-full bg-pink-100 text-pink-600 shadow-lg group-hover:scale-125 transition-all duration-500">
+                    <div class="absolute top-0 left-1/2 -translate-x-1/2 z-10 p-5 rounded-full bg-pink-100 text-pink-600 shadow-lg group-hover:scale-125 transition-all duration-500 text-2xl">
                         🎤
                     </div>
                     <div class="glass p-8 pt-16 text-center h-full border-none group-hover:bg-white/60 transition-all duration-500 rounded-[2rem] group-hover:-translate-y-2">
@@ -207,7 +215,7 @@
                 </div>
                 <!-- Hobby: Menggambar -->
                 <div class="group relative pt-12">
-                    <div class="absolute top-0 left-1/2 -translate-x-1/2 z-10 p-5 rounded-full bg-purple-100 text-purple-600 shadow-lg group-hover:scale-125 transition-all duration-500">
+                    <div class="absolute top-0 left-1/2 -translate-x-1/2 z-10 p-5 rounded-full bg-purple-100 text-purple-600 shadow-lg group-hover:scale-125 transition-all duration-500 text-2xl">
                         🎨
                     </div>
                     <div class="glass p-8 pt-16 text-center h-full border-none group-hover:bg-white/60 transition-all duration-500 rounded-[2rem] group-hover:-translate-y-2">
@@ -219,7 +227,7 @@
                 </div>
                 <!-- Hobby: Menulis -->
                 <div class="group relative pt-12">
-                    <div class="absolute top-0 left-1/2 -translate-x-1/2 z-10 p-5 rounded-full bg-blue-100 text-blue-600 shadow-lg group-hover:scale-125 transition-all duration-500">
+                    <div class="absolute top-0 left-1/2 -translate-x-1/2 z-10 p-5 rounded-full bg-blue-100 text-blue-600 shadow-lg group-hover:scale-125 transition-all duration-500 text-2xl">
                         ✍️
                     </div>
                     <div class="glass p-8 pt-16 text-center h-full border-none group-hover:bg-white/60 transition-all duration-500 rounded-[2rem] group-hover:-translate-y-2">
@@ -245,12 +253,11 @@
                 </p>
                 
                 <div class="flex flex-col sm:flex-row items-center justify-center gap-6 relative z-10">
-                    <!-- Updated WhatsApp Number -->
                     <a href="https://wa.me/6282337931876" target="_blank" class="flex items-center gap-3 px-12 py-5 bg-[#25D366] text-white rounded-full font-bold text-lg shadow-[0_10px_30px_rgba(37,211,102,0.3)] hover:shadow-[0_15px_40px_rgba(37,211,102,0.4)] hover:scale-105 transition-all">
-                        <span>💬</span> WhatsApp Sherly
+                        <span class="text-2xl">💬</span> WhatsApp Sherly
                     </a>
                     <a href="mailto:sherlyrosita@example.com" class="px-12 py-5 bg-white/60 backdrop-blur-md border border-white text-gray-700 rounded-full font-bold text-lg hover:bg-white transition-all shadow-md">
-                        📧 Kirim Email
+                        <span class="text-2xl">📧</span> Kirim Email
                     </a>
                 </div>
             </div>
